--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 html, body {
   font-family: Helvetica, Arial, sans-serif;
 }
+
+.ReactTable .rt-th, .ReactTable .rt-td {
+  padding: 0 !important;
+}
